22 dec result is added

--- a/all_result_minia.html
+++ b/all_result_minia.html
@@ -11,7 +11,7 @@
 
        // jQuery methods go here...
       var primaryTableName = 'data_table_1';
-      var secondaryTableNames = ['data_table_2'];
+      var secondaryTableNames = ['data_table_2', 'data_table_3'];
 
       var primaryJsonTable = getJsonOfTable(primaryTableName);
 
@@ -249,7 +249,30 @@
         <tr> <td>###</td> <td>Human1_95G_CASAVA1.8a2_NCBI37_18Jan11_chr21.sorted.fasta</td> <td>27</td> <td>1</td> <td>138568143</td> <td>1083</td> <td>1599</td> <td>98</td> </tr>
       </table>
 
+      <br/>
+      <br/>
+      Result Table 22 dec 2015
+      <table border='2' id='data_table_3'> <tr> <td>~#~</td> <td>Filename</td> <td>k size</td> <td>min abundance</td> <td>estimated genome size</td> <td>runtime</td> <td>HD space</td> <td>ram space</td> </tr>
+         <tr> <td>###</td> <td>50m.fa</td> <td>32</td> <td>1</td> <td>2189163749</td> <td>33150</td> <td>5030</td> <td>1574</td> </tr>
+         <tr> <td>###</td> <td>dataset_1_7GB.fa</td> <td>32</td> <td>1</td> <td>138568143</td> <td>1107</td> <td>1599</td> <td>99</td> </tr>
+         <tr> <td>###</td> <td>dataset_1_9GB.fa</td> <td>32</td> <td>1</td> <td>113775137</td> <td>870</td> <td>1854</td> <td>81</td> </tr>
+         <tr> <td>###</td> <td>Ecoli_MG1655_s_6_1_bfast.fasta</td> <td>32</td> <td>1</td> <td>13795561</td> <td>101</td> <td>242</td> <td>9</td> </tr>
+         <tr> <td>###</td> <td>Ecoli_MG1655_s_6_2_bfast.fasta</td> <td>32</td> <td>1</td> <td>133958572</td> <td>1747</td> <td>1718</td> <td>96</td> </tr>
+         <tr> <td>###</td> <td>NA19240_GAIIx_100_chr21.fasta</td> <td>32</td> <td>1</td> <td>113775137</td> <td>871</td> <td>1854</td> <td>81</td> </tr>
+         <tr> <td>###</td> <td>Human1_95G_CASAVA1.8a2_NCBI37_18Jan11_chr19.sorted.fasta</td> <td>32</td> <td>1</td> <td>222896820</td> <td>2082</td> <td>2393</td> <td>160</td> </tr>
+         <tr> <td>###</td> <td>Human1_95G_CASAVA1.8a2_NCBI37_18Jan11_chr21.sorted.fasta</td> <td>32</td> <td>1</td> <td>138568143</td> <td>1100</td> <td>1599</td> <td>99</td> </tr>
+         <tr> <td>###</td> <td>50m.fa</td> <td>27</td> <td>1</td> <td>2189163749</td> <td>37967</td> <td>5030</td> <td>1559</td> </tr>
+         <tr> <td>###</td> <td>dataset_1_7GB.fa</td> <td>27</td> <td>1</td> <td>138568143</td> <td>1095</td> <td>1599</td> <td>98</td> </tr>
+         <tr> <td>###</td> <td>dataset_1_9GB.fa</td> <td>27</td> <td>1</td> <td>113775137</td> <td>840</td> <td>1854</td> <td>81</td> </tr>
+         <tr> <td>###</td> <td>Ecoli_MG1655_s_6_1_bfast.fasta</td> <td>27</td> <td>1</td> <td>13795561</td> <td>100</td> <td>242</td> <td>9</td> </tr>
+         <tr> <td>###</td> <td>Ecoli_MG1655_s_6_2_bfast.fasta</td> <td>27</td> <td>1</td> <td>133958572</td> <td>1758</td> <td>1718</td> <td>95</td> </tr>
+         <tr> <td>###</td> <td>NA19240_GAIIx_100_chr21.fasta</td> <td>27</td> <td>1</td> <td>113775137</td> <td>845</td> <td>1854</td> <td>81</td> </tr>
+         <tr> <td>###</td> <td>Human1_95G_CASAVA1.8a2_NCBI37_18Jan11_chr19.sorted.fasta</td> <td>27</td> <td>1</td> <td>222896820</td> <td>2217</td> <td>2393</td> <td>158</td> </tr>
+         <tr> <td>###</td> <td>Human1_95G_CASAVA1.8a2_NCBI37_18Jan11_chr21.sorted.fasta</td> <td>27</td> <td>1</td> <td>138568143</td> <td>1075</td> <td>1599</td> <td>98</td> </tr> </table>
+
     </div>
+
+
 
 
 
